2022-09-08  Jay Berkenbilt  <ejb@ql.org>

        * Added new functions to the C API to support qpdf JSON:
        qpdf_create_from_json_file, qpdf_create_from_json_data,
        qpdf_update_from_json_file, qpdf_update_from_json_data, and
        qpdf_write_json. Examples can be found in qpdf-ctest.c (in the
        source tree), tests 42 through 47.

        * Add QPDFObjectHandle::isDestroyed() to test whether an indirect
        object was from a QPDF that has been destroyed.

2022-09-07  Jay Berkenbilt  <ejb@ql.org>

        * Add QPDFObjectHandle::getQPDF(), which returns a reference, as
        an alternative to QPDFObjectHandle::getOwningQPDF().

2022-09-06  Jay Berkenbilt  <ejb@ql.org>

        * For all bounding box methods in QPDFPageObjectHelper other than
        MediaBox, add a parameter `copy_if_fallback`, and add comments
        explaining in depth exactly what copy_if_shared and
        copy_if_fallback mean. Fixes #664.

        * Add new methods getArtBox and getBleedBox to
        QPDFPageObjectHelper, completing the set of bounding box methods.

        * Add == equality for QPDFObjectHandle. Two QPDFObjectHandle
        objects are equal if they point to the same underlying object,
        meaning changes to one will be reflected in the other.

        * The --show-encryption option now works even if a correct
        password is not supplied. If you were using --show-encryption to
        test whether you have the right password, use --requires-password
        instead. Fixes #598.

2022-09-05  Jay Berkenbilt  <ejb@ql.org>

        * Add a move constructor to Buffer, making it possible to move
        rather than copy the internal buffer. Thanks to jbarlow83 for the
        contribution.

2022-09-02  Jay Berkenbilt  <ejb@ql.org>

        * Add new QPDF::create() factory method that returns
        std::shared_ptr<QPDF>.

        * Prevent copying/assigning to QPDF objects in the API. It has